# Copyright 2017 The Cayley Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http:#www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "gazelle", "go_library")
load("@io_bazel_rules_docker//docker:docker.bzl", "docker_build", "docker_push")

gazelle(
    name = "gazelle",
    prefix = "github.com/cayleygraph/cayley",
)

go_library(
    name = "go_default_library",
    srcs = [
        "gogen.go",
        "imports.go",
    ],
    importpath = "github.com/cayleygraph/cayley",
    visibility = ["//visibility:public"],
    deps = [
        "//graph:go_default_library",
        "//graph/memstore:go_default_library",
        "//graph/path:go_default_library",
        "//quad:go_default_library",
        "//writer:go_default_library",
    ],
)

docker_build(
    name = "docker",
    repository = "cayley",
    files = [
      "//cmd/cayley:cayley"
    ],
    ports = [
      "64210"
    ],
    volumes = [
      "/data"
    ],
    labels = {
      # Add maintainer, ...
    },
    cmd = ["./cayley", "http", "--host", ":64210"],
)

docker_push(
   name = "push_docker",
   image = ":docker",
   registry = "index.docker.io",
   repository = "yannic/cayley",
   tag = "dev",
)
