# Copyright 2017 The Cayley Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http:#www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["integration.go"],
    importpath = "github.com/cayleygraph/cayley/integration",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["integration_test.go"],
    importpath = "github.com/cayleygraph/cayley/integration",
    library = ":go_default_library",
    deps = [
        "//graph:go_default_library",
        "//graph/bolt:go_default_library",
        "//graph/bolt2:go_default_library",
        "//graph/leveldb:go_default_library",
        "//graph/memstore:go_default_library",
        "//graph/mongo:go_default_library",
        "//graph/sql:go_default_library",
        "//internal:go_default_library",
        "//internal/config:go_default_library",
        "//internal/db:go_default_library",
        "//quad:go_default_library",
        "//query:go_default_library",
        "//query/gizmo:go_default_library",
        "//writer:go_default_library",
    ],
    data = ["//data:30kmoviedata"],
)
