# Copyright 2017 The Cayley Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http:#www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "formats.go",
        "quad.go",
        "rw.go",
        "value.go",
    ],
    importpath = "github.com/cayleygraph/cayley/quad",
    visibility = ["//visibility:public"],
    deps = [
        "//voc:go_default_library",
        "//voc/schema:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["value_test.go"],
    importpath = "github.com/cayleygraph/cayley/quad",
    library = ":go_default_library",
)

filegroup(
    name = "ntriple_tests",
    srcs = [
        "ntriple_tests.tar.gz",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "nquad_tests",
    srcs = [
        "nquad_tests.tar.gz",
    ],
    visibility = ["//visibility:public"],
)
