# Copyright 2017 The Cayley Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http:#www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "all.go",
        "and.go",
        "and_optimize.go",
        "count.go",
        "fixed.go",
        "hasa.go",
        "iterator.go",
        "limit.go",
        "linksto.go",
        "materialize.go",
        "not.go",
        "optional.go",
        "or.go",
        "query_shape.go",
        "recursive.go",
        "regex.go",
        "skip.go",
        "unique.go",
        "value_comparison.go",
    ],
    importpath = "github.com/cayleygraph/cayley/graph/iterator",
    visibility = ["//visibility:public"],
    deps = [
        "//clog:go_default_library",
        "//graph:go_default_library",
        "//quad:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["count_test.go"],
    importpath = "github.com/cayleygraph/cayley/graph/iterator",
    library = ":go_default_library",
    deps = [
        "//graph:go_default_library",
        "//quad:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)

go_test(
    name = "go_default_xtest",
    srcs = [
        "and_optimize_test.go",
        "and_test.go",
        "hasa_test.go",
        "iterator_test.go",
        "limit_test.go",
        "linksto_test.go",
        "materialize_test.go",
        "not_test.go",
        "or_test.go",
        "query_shape_test.go",
        "recursive_test.go",
        "skip_test.go",
        "unique_test.go",
        "value_comparison_test.go",
    ],
    importpath = "github.com/cayleygraph/cayley/graph/iterator_test",
    deps = [
        ":go_default_library",
        "//graph:go_default_library",
        "//graph/graphmock:go_default_library",
        "//quad:go_default_library",
    ],
)
