# Copyright 2017 The Cayley Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http:#www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "indexed_linksto.go",
        "iterator.go",
        "quadstore.go",
        "quadstore_iterator_optimize.go",
    ],
    importpath = "github.com/cayleygraph/cayley/graph/mongo",
    visibility = ["//visibility:public"],
    deps = [
        "//clog:go_default_library",
        "//graph:go_default_library",
        "//graph/iterator:go_default_library",
        "//internal/lru:go_default_library",
        "//quad:go_default_library",
        "//quad/pquads:go_default_library",
        "@in_gopkg_mgo_v2//:go_default_library",
        "@in_gopkg_mgo_v2//bson:go_default_library",
    ],
)
