# Copyright 2017 The Cayley Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http:#www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "nquads.go",
        "raw.go",
        "typed.go",
    ],
    importpath = "github.com/cayleygraph/cayley/quad/nquads",
    visibility = ["//visibility:public"],
    deps = ["//quad:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "raw_test.go",
        "typed_test.go",
    ],
    importpath = "github.com/cayleygraph/cayley/quad/nquads",
    library = ":go_default_library",
    deps = ["//quad:go_default_library"],
    data = [
        "//quad:nquad_tests",
        "//quad:ntriple_tests",
    ],
)
