# Copyright 2017 The Cayley Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http:#www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "pquads.go",
        "quads.go",
        "quads.pb.go",
    ],
    importpath = "github.com/cayleygraph/cayley/quad/pquads",
    visibility = ["//visibility:public"],
    deps = [
        "//quad:go_default_library",
        "//quad/pquads/pio:go_default_library",
        "@com_github_gogo_protobuf//gogoproto:go_default_library",
        "@com_github_gogo_protobuf//proto:go_default_library",
    ],
)

filegroup(
    name = "go_default_library_protos",
    srcs = ["quads.proto"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_xtest",
    srcs = ["pquads_test.go"],
    importpath = "github.com/cayleygraph/cayley/quad/pquads_test",
    deps = [
        ":go_default_library",
        "//quad:go_default_library",
    ],
)
