# Copyright 2017 The Cayley Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http:#www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "convert.go",
        "database.go",
        "dedup.go",
        "dump.go",
        "http.go",
        "repl.go",
    ],
    importpath = "github.com/cayleygraph/cayley/cmd/cayley/command",
    visibility = ["//visibility:public"],
    deps = [
        "//clog:go_default_library",
        "//graph:go_default_library",
        "//graph/path:go_default_library",
        "//internal:go_default_library",
        "//internal/db:go_default_library",
        "//internal/http:go_default_library",
        "//quad:go_default_library",
        "//query:go_default_library",
        "//voc/rdf:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
    ],
)
